styled IP paragraph

--- a/style.css
+++ b/style.css
@@ -1,54 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap');
-
+ 
 html {
     box-sizing: border-box;
 }
-
+ 
 *, *::after, *::before {
     box-sizing: inherit;
 }
-
+ 
 .body {
     margin: 0;
     background-image: linear-gradient(to right, #0e1749, #00072D); 
     font-family: 'Helvetica';
 }
-
+ 
 .header {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
+ 
 .header__heading {
     color: #F72C25;
     margin-bottom: 0;
 }
-
+ 
 .header__paragraph {
     color: #791916;
     text-transform: uppercase;
     font-weight: 700;
     margin-top: 0;
 }
-
+ 
+.header__ip {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 700;
+    background-image: linear-gradient( 110.9deg,  rgba(44,221,239,1) 1.1%, rgba(14,191,210,1) 37.6%, rgba(8,127,140,1) 99.2% );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-transform: uppercase;
+}
+ 
 .main {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-top: 80px;
-
+ 
 }
-
+ 
 .buttons {
     display: grid;
     grid-template-columns: 70px 70px 70px;
     grid-template-rows: 70px 70px 70px;
     grid-template-areas: ". buttons__up ." "buttons__left . buttons__right" ". buttons__down .";
 }
-
+ 
 .buttons__button {
     background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
     box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
@@ -57,64 +67,64 @@ html {
    border-radius: 50%;
    transition: all 0.1s ease-in-out;
 }
-
+ 
 .buttons__button:hover {
     opacity: 0.3;
     box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
         6px 6px 10px rgba(0, 0, 0, 0.2);
 }
-
+ 
 .buttons__button:active {
     opacity: 1;
     box-shadow: inset -4px -4px 8px rgba(255, 255, 255, 0.5),
         inset 8px 8px 16px rgba(0, 0, 0, 0.1);
 }
-
+ 
 .buttons__button:focus {
     outline: none;
 }
-
+ 
 .buttons__up {
     grid-area: buttons__up;
 }
-
+ 
 .up {
     transform: rotate(-90deg);
 }
-
+ 
 .buttons__left {
     grid-area: buttons__left;
 }
-
+ 
 .left {
     transform: rotate(180deg);
 }
-
+ 
 .buttons__right {
     grid-area: buttons__right;
 }
-
+ 
 .buttons__down {
     grid-area: buttons__down;
 }
-
+ 
 .down {
     transform: rotate(90deg);
 }
-
+ 
 .buttons__image {
     width: 100%;
 }
-
+ 
 .form {
     margin-top: 32px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-
-
+ 
+ 
+ 
 .form__ip {
     border: 0;
     outline: 0;
@@ -127,19 +137,20 @@ html {
    transition: all 0.2s ease-in-out;
    appearance: none;
    color: #F72C25;
+   text-align: center;
 }
-
+ 
 .form__ip:focus {
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.5),
     inset -1px -1px 2px rgba(255, 255, 255, 0.3);
 }
-
+ 
 .form__ip::placeholder {
     color: #791916;
     font-weight: 700;
     font-size: 1.25em;
 }
-
+ 
 .form__button {
     margin-top: 8px;
     width: 50%;
@@ -152,10 +163,8 @@ html {
     transition: ease-out 1s;
     text-align: center;
 }
-
+ 
 .form__button:hover {
     transition: ease-out 1s;
     background-image: linear-gradient(to right, #d47272, #bb4e4e);
 }
-
-
